@@ -1,8 +1,8 @@
 Package: openair
 Type: Package
 Title: Tools for the analysis of air pollution data
-Version: 0.7-1
-Date: 2012-09-19
+Version: 0.7-2
+Date: 2012-10-18
 Authors@R: c(person("David", "Carslaw", role = c("aut", "cre"), email =
     "david.carslaw@kcl.ac.uk"), person("Karl", "Ropkins", role =
     "aut", email = "K.Ropkins@its.leeds.ac.uk"))
@@ -90,3 +90,4 @@ Collate:
     'mydata.R'
     'trajCluster.R'
     'conditionalEval.R'
+    'timeProp.R'
