@@ -40,6 +40,7 @@ export(TaylorDiagram)
 export(TheilSen)
 export(timeAverage)
 export(timePlot)
+export(timeProp)
 export(timeVariation)
 export(trajCluster)
 export(trajLevel)
