@@ -153,6 +153,23 @@ date.pad2 <- function(mydata, interval = "month") {
     mydata
 }
 
+## unitility function to convert decimal date to POSIXct
+decimalDate <- function(x, date = "date") {
+    thedata <- x
+    x <- x[, date]
+    x.year <- floor(x)
+    ## fraction of the year
+    x.frac <- x - x.year
+    ## number of seconds in each year
+    x.sec.yr <- unclass(ISOdate(x.year + 1, 1, 1, 0, 0, 0)) - unclass(ISOdate(x.year, 1, 1, 0, 0, 0))
+    ## now get the actual time
+    x.actual <- ISOdate(x.year, 1, 1, 0, 0, 0) + x.frac * x.sec.yr
+    x.actual <- as.POSIXct(trunc(x.actual, "hours"), "GMT")
+    thedata$date <- x.actual
+    thedata
+}
+
+
 
 
 ##' Calculate rollingMean values
